--- a/temp.ipynb
+++ b/temp.ipynb
@@ -3,13 +3,160 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43bbec39",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "id": "f27aab68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/pty.py:95: DeprecationWarning: This process (pid=6867) is multi-threaded, use of forkpty() may lead to deadlocks in the child.\n",
+      "  pid, fd = os.forkpty()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: duckduckgo-search in /Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages (8.1.1)\n",
+      "Requirement already satisfied: click>=8.1.8 in /Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages (from duckduckgo-search) (8.2.1)\n",
+      "Requirement already satisfied: primp>=0.15.0 in /Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages (from duckduckgo-search) (0.15.0)\n",
+      "Requirement already satisfied: lxml>=5.3.0 in /Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages (from duckduckgo-search) (6.0.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "zsh:1: no matches found: smolagents[litellm]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/pty.py:95: DeprecationWarning: This process (pid=6867) is multi-threaded, use of forkpty() may lead to deadlocks in the child.\n",
+      "  pid, fd = os.forkpty()\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
+   "source": [
+    "!pip install duckduckgo-search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43bbec39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INVOKING\n",
+      "\n",
+      "--- ROUTER INPUT ---\n",
+      "Input: I am feeling energetic today, I want to do a good workout that includes going to the swimming pool due to it being very hot today, I want to know what does the word key mean in German, also add to my training biking and tell me a good place to do it. I need to eat to boost my protein intake\n",
+      "\n",
+      "[Weather Context] Current weather in Paris: 21.24°C, clear sky\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/smolagents/default_tools.py:135: RuntimeWarning: This package (`duckduckgo_search`) has been renamed to `ddgs`! Use `pip install ddgs` instead.\n",
+      "  self.ddgs = DDGS(**kwargs)\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAW OUTPUTS: \n",
+      " ```plaintext\n",
+      "Fitness:\n",
+      "- I am feeling energetic today, I want to do a good workout that includes going to the swimming pool due to it being very hot today\n",
+      "Wellbeing:\n",
+      "- I am feeling energetic today, I want to do a good workout that includes going to the swimming pool due to it being very hot today\n",
+      "Nutrition:\n",
+      "- I need to eat to boost my protein intake\n",
+      "```\n",
+      "combined_output OUTPUTS:  {'Weather': '', 'Fitness': 'i am feeling energetic today, i want to do a good workout that includes going to the swimming pool due to it being very hot today', 'Wellbeing': 'i am feeling energetic today, i want to do a good workout that includes going to the swimming pool due to it being very hot today', 'Sleep': '', 'Calendar': '', 'Nutrition': 'i need to eat to boost my protein intake', 'Reminder': '', 'Search': '', 'Unknown': ''}\n",
+      "\n",
+      "[Invoking Fitness Agent]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[Fitness Agent Response] swimming pool\n",
+      "\n",
+      "[Invoking Wellbeing Agent]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[Wellbeing Agent Response] Take a walk in nature  \n",
+      "Read a book or listen to music\n",
+      "\n",
+      "[Invoking Search Agent]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[Search Agent Response] To boost your protein intake, consider adding foods rich in protein such as lean meats, eggs, fish, and plant-based proteins like lentils, tofu, and quinoa. Also, ensure you are drinking plenty of water throughout the day for overall health. The current temperature in Paris is 21.24°C, with clear skies.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import requests\n",
@@ -89,7 +236,10 @@
     "        return {\"error\": str(e)}\n",
     "    ctx['weather'] = info\n",
     "    return info\n",
+    "\n",
+    "\n",
     "class SpoonacularTool(Tool):\n",
+    "    print(\"INVOKING\")\n",
     "    inputs = {\n",
     "        \"input_text\": {\n",
     "            \"type\": \"string\",\n",
@@ -105,14 +255,15 @@
     "    )\n",
     "\n",
     "    def forward(self, input_text: str) -> str:\n",
+    "        print(\"INPUT_TEXT\", input_text)\n",
     "        command, _, arg = input_text.partition(\":\")\n",
     "        if command == \"search\":\n",
     "            return self.search_recipes(arg)\n",
     "        if command == \"details\":\n",
-    "            return self.get_full_details(arg)\n",
+    "            return self.get_nutritional_info(arg)\n",
     "        return f\"Unknown command: {input_text}\"\n",
     "\n",
-    "    def search_recipes(self, query: str, number: int = 3) -> str:\n",
+    "    def search_recipes(self, query: str, number: int = 1) -> str:\n",
     "        url = f\"{BASE_URL}/recipes/complexSearch\"\n",
     "        params = {\n",
     "            'query': query,\n",
@@ -125,33 +276,19 @@
     "        results = resp.json().get('results', [])\n",
     "        return \"\\n\".join(f\"{r['id']}: {r['title']}\" for r in results)\n",
     "\n",
-    "    def get_full_details(self, recipe_id: str) -> str:\n",
-    "        # Fetch instructions\n",
-    "        instr = requests.get(\n",
-    "            f\"{BASE_URL}/recipes/{recipe_id}/analyzedInstructions\",\n",
-    "            params={'apiKey': SPOONACULAR_API_KEY}\n",
-    "        ).json()\n",
-    "        steps = [step['step'] for section in instr for step in section.get('steps', [])]\n",
-    "        # Fetch nutrition\n",
+    "    def get_nutritional_info(self, recipe_id: str) -> str:\n",
     "        nut = requests.get(\n",
     "            f\"{BASE_URL}/recipes/{recipe_id}/nutritionWidget.json\",\n",
     "            params={'apiKey': SPOONACULAR_API_KEY}\n",
     "        ).json()\n",
-    "        # Fetch taste\n",
-    "        taste = requests.get(\n",
-    "            f\"{BASE_URL}/recipes/{recipe_id}/tasteWidget.json\",\n",
-    "            params={'apiKey': SPOONACULAR_API_KEY}\n",
-    "        ).json()\n",
     "        # Assemble output\n",
     "        out = \"**Instructions:**\\n\"\n",
-    "        for i, s in enumerate(steps, 1): out += f\"{i}. {s}\\n\"\n",
     "        out += \"\\n**Nutrition per serving:**\\n\"\n",
     "        out += f\"- Calories: {nut['calories']}\\n\"\n",
     "        out += f\"- Carbs: {nut['carbs']}\\n\"\n",
     "        out += f\"- Fat: {nut['fat']}\\n\"\n",
     "        out += f\"- Protein: {nut['protein']}\\n\\n\"\n",
     "        out += \"**Taste Profile:**\\n\"\n",
-    "        for k, v in taste.items(): out += f\"- {k.capitalize()}: {v}%\\n\"\n",
     "        return out\n",
     "# Prompt generator\n",
     "model = LiteLLMModel(model_id=\"ollama/qwen2.5-coder:3b\")\n",
@@ -194,13 +331,17 @@
     ")\n",
     "\n",
     "prompt_nutrition = (\n",
-    "    \"You are an expert cooking assistant. When given any user query about meals, you must: \\n\"\n",
-    "    \"1) Read the query and extract all dish names or food items (e.g., 'pizza'). \\n\"\n",
-    "    \"2) For each extracted dish, use the tool with 'search:<dish>' to retrieve top recipe IDs and titles. \\n\"\n",
-    "    \"3) Choose the most relevant recipe ID for each dish. \\n\"\n",
-    "    \"4) For each dish, use the tool with 'details:<id>' to fetch full instructions, nutrition, and taste profile. \\n\"\n",
-    "    \"5) Present a combined response organized by dish, including recipe name, steps, nutrition, and flavor profile. \\n\"\n",
-    "    \"6) If the you were not able to get results from the SpoonacularTool use DuckDuckGoSearchTool to provide the answer.\"\n",
+    "    \"\"\"\n",
+    "    IMPORTANT: This is a food-related query. Please provide comprehensive nutritional information including:\n",
+    "    - Calories per serving\n",
+    "    - Protein, carbohydrates, and fat content\n",
+    "    - Key vitamins and minerals\n",
+    "    - Health benefits and dietary considerations\n",
+    "    - Suggestions for healthier ingredient substitutions when applicable\n",
+    "    - Use the search tool to find accurate nutritional data from reliable sources like USDA food database\n",
+    "\n",
+    "    Present the nutritional information prominently in your response.\n",
+    "    \"\"\"\n",
     ")\n",
     "\n",
     "\n",
@@ -209,7 +350,7 @@
     "agent_fitness = CodeAgent(model=model, tools=[get_weather], max_steps=2, verbosity_level=-1)\n",
     "agent_search = CodeAgent(model=model, tools=[DuckDuckGoSearchTool()], max_steps=2, verbosity_level=-1)\n",
     "agent_nutrition = CodeAgent(model=model, tools=[SpoonacularTool(), DuckDuckGoSearchTool()], max_steps=2, verbosity_level=-1)\n",
-    "agent_nutrition.prompt_templates['system_prompt'] = prompt_nutrition\n",
+    "# agent_nutrition.prompt_templates['system_prompt'] = prompt_nutrition\n",
     "\n",
     "agent_router = CodeAgent(model=model, tools=[], max_steps=3, verbosity_level=-1)\n",
     "\n",
@@ -318,6 +459,14 @@
     "    output = router(test_input, location)\n",
     "    # print(output)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4e025ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
