reminder agent addition

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "43bbec39",
    "metadata": {},
    "outputs": [
@@ -54,15 +54,17 @@
       "INVOKING\n",
       "\n",
       "--- ROUTER INPUT ---\n",
-      "Input: I am feeling energetic today, I want to do a good workout that includes going to the swimming pool due to it being very hot today, I want to know what does the word key mean in German, also add to my training biking and tell me a good place to do it. I need to eat to boost my protein intake\n",
+      "Input: I am feeling energetic today, I want to do a good workout that includes going to the swimming pool due to it being very hot today, also add to my training biking and tell me a good place to do it. I need to eat to boost my protein intake and remind me to drink water in 1 hour\n",
       "\n",
-      "[Weather Context] Current weather in Paris: 21.24°C, clear sky\n"
+      "[Weather Context] Current weather in Paris: 18.75°C, overcast clouds\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/smolagents/default_tools.py:135: RuntimeWarning: This package (`duckduckgo_search`) has been renamed to `ddgs`! Use `pip install ddgs` instead.\n",
+      "  self.ddgs = DDGS(**kwargs)\n",
       "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/smolagents/default_tools.py:135: RuntimeWarning: This package (`duckduckgo_search`) has been renamed to `ddgs`! Use `pip install ddgs` instead.\n",
       "  self.ddgs = DDGS(**kwargs)\n",
       "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
@@ -82,17 +84,24 @@
      "output_type": "stream",
      "text": [
       "RAW OUTPUTS: \n",
-      " ```plaintext\n",
-      "Fitness:\n",
-      "- I am feeling energetic today, I want to do a good workout that includes going to the swimming pool due to it being very hot today\n",
-      "Wellbeing:\n",
-      "- I am feeling energetic today, I want to do a good workout that includes going to the swimming pool due to it being very hot today\n",
-      "Nutrition:\n",
-      "- I need to eat to boost my protein intake\n",
-      "```\n",
-      "combined_output OUTPUTS:  {'Weather': '', 'Fitness': 'i am feeling energetic today, i want to do a good workout that includes going to the swimming pool due to it being very hot today', 'Wellbeing': 'i am feeling energetic today, i want to do a good workout that includes going to the swimming pool due to it being very hot today', 'Sleep': '', 'Calendar': '', 'Nutrition': 'i need to eat to boost my protein intake', 'Reminder': '', 'Search': '', 'Unknown': ''}\n",
+      " Weather:\n",
+      "- I want to do a good workout that includes going to the swimming pool due to it being very hot today.\n",
       "\n",
-      "[Invoking Fitness Agent]\n"
+      "Fitness:\n",
+      "- I want to do a good workout, biking.\n",
+      "- Tell me a good place to do it.\n",
+      "\n",
+      "Wellbeing:\n",
+      "- I am feeling energetic today.\n",
+      "\n",
+      "Nutrition:\n",
+      "- I need to eat to boost my protein intake.\n",
+      "\n",
+      "Reminder:\n",
+      "- Remind me to drink water in 1 hour.\n",
+      "combined_output OUTPUTS:  {'Weather': 'i want to do a good workout that includes going to the swimming pool due to it being very hot today', 'Fitness': 'i want to do a good workout, biking, & tell me a good place to do it', 'Wellbeing': 'i am feeling energetic today', 'Sleep': '', 'Calendar': '', 'Nutrition': 'i need to eat to boost my protein intake', 'Reminder': 'remind me to drink water in 1 hour', 'Search': '', 'Unknown': ''}\n",
+      "\n",
+      "[Invoking Search Agent]\n"
      ]
     },
     {
@@ -110,7 +119,53 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[Fitness Agent Response] swimming pool\n",
+      "[Search Agent Response] Swimming is an excellent exercise for burning calories and improving cardiovascular health when the temperature is high. Some recommended activities include:\n",
+      "- **Free泳 (Freestyle)**: This technique involves using all four limbs while moving through water.\n",
+      "- **蛙泳 (Bikini)**: A popular style that allows you to stay afloat with your legs.\n",
+      "- **仰泳 (Breaststroke)**: Uses the arms and chest for propulsion, which is less strenuous than freestyle on the back.\n",
+      "- **蝶泳 (Butterfly)**: This involves both arms and legs moving simultaneously in a circular motion.\n",
+      "\n",
+      "Consider choosing an activity that suits your comfort level and fitness goals. Always warm up before swimming to prevent injuries.\n",
+      "\n",
+      "[Invoking Fitness Agent]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[Fitness Agent Response] **Bike Rental Locations in Paris**\n",
+      "\n",
+      "Paris is known for its iconic bike lanes and public transportation system, making it an ideal location for a good cycling workout. Here are some popular bike rental locations:\n",
+      "\n",
+      "1. **Cathédrale Notre-Dame de la Garde**: This cathedral offers extensive paths for biking, including the Grand Louvre Metro stop.\n",
+      "\n",
+      "2. **Jardin du Luxembourg**: The park provides ample space for a leisurely or more energetic cycle ride around its winding paths and gardens.\n",
+      "\n",
+      "3. **Bercy Riverfront Park**: Located near the riverbank, this area offers scenic views of the Seine while providing good cycling opportunities.\n",
+      "\n",
+      "4. **Montmartre**: This historic neighborhood has many bicycle rental shops, particularly around the square near Sacré-Cœur Basilica.\n",
+      "\n",
+      "5. **Gare de Lyon (Saint-Germain-des-Halles)**: This bustling metro station has several bike racks available for public use.\n",
+      "\n",
+      "6. **Parc Montsouris**: A large park with several cycling paths and a lake, ideal for those looking to cycle in a natural setting.\n",
+      "\n",
+      "7. **Musée d'Orsay**: With its expansive grounds and cycle paths around it, the museum is an excellent place to take a break and enjoy some cycling.\n",
+      "\n",
+      "These locations offer a variety of terrains and scenic views to complement your workout routine, whether you're looking for a casual stroll or an adrenaline rush.\n",
       "\n",
       "[Invoking Wellbeing Agent]\n"
      ]
@@ -132,8 +187,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[Wellbeing Agent Response] Take a walk in nature  \n",
-      "Read a book or listen to music\n",
+      "[Wellbeing Agent Response] **Wellbeing Companion:** \n",
+      "- **Short-term coping tips:** Continue engaging in activities that bring you joy and relaxation.\n",
+      "- **Actionable wellness advice:** Focus on maintaining a consistent routine to support your energy levels and well-being.\n",
       "\n",
       "[Invoking Search Agent]\n"
      ]
@@ -145,6 +201,10 @@
       "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
       "  headers, stream = encode_request(\n",
       "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
+      "  headers, stream = encode_request(\n",
+      "/Users/I756498/.asdf/installs/python/3.13.1/lib/python3.13/site-packages/httpx/_models.py:408: DeprecationWarning: Use 'content=<...>' to upload raw bytes/text content.\n",
       "  headers, stream = encode_request(\n"
      ]
     },
@@ -153,7 +213,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[Search Agent Response] To boost your protein intake, consider adding foods rich in protein such as lean meats, eggs, fish, and plant-based proteins like lentils, tofu, and quinoa. Also, ensure you are drinking plenty of water throughout the day for overall health. The current temperature in Paris is 21.24°C, with clear skies.\n"
+      "[Search Agent Response] To boost your protein intake, consider incorporating lean sources of protein like eggs, chicken breast, fish (such as salmon or tuna), lentils, chickpeas, and beans into your meals. These options are low in fat and calories while providing essential amino acids needed for muscle repair and growth. Additionally, aim to consume a balanced diet rich in vegetables, fruits, whole grains, and healthy fats to ensure you meet all your nutritional needs.\n",
+      "\n",
+      "[Invoking Reminder Agent]\n",
+      "REMINDER TEXT Drink water!\n",
+      "payload:  {'title': 'Drink water!', 'timezone': 'Europe/Paris', 'date_tz': '2025-07-16', 'time_tz': '09:00', 'notify_in_advance': '10 minutes', 'snoozed': 0}\n",
+      "\n",
+      "[Reminder Agent Response] Reminder created\n"
      ]
     }
    ],
@@ -161,11 +227,13 @@
     "import os\n",
     "import requests\n",
     "import re\n",
+    "from datetime import datetime, timedelta\n",
     "from smolagents import CodeAgent, DuckDuckGoSearchTool, LiteLLMModel, tool, Tool\n",
     "\n",
     "# Weather Tool\n",
     "OPENWEATHER_API_KEY = \"bd5e378503939ddaee76f12ad7a97608\"\n",
     "SPOONACULAR_API_KEY = \"f2f6b1736b0e488d9bf536af6b017519\"\n",
+    "REMINDERS_API_KEY = \"vCulKBidqDF0MwUza6GSL5kTWwpj66hb6rWmGxYS\"\n",
     "BASE_URL = \"https://api.spoonacular.com\"\n",
     "\n",
     "categories = ['Weather', 'Fitness', 'Wellbeing', 'Sleep', 'Calendar', 'Nutrition', 'Reminder', 'Search', 'Unknown']\n",
@@ -290,7 +358,61 @@
     "        out += f\"- Protein: {nut['protein']}\\n\\n\"\n",
     "        out += \"**Taste Profile:**\\n\"\n",
     "        return out\n",
-    "# Prompt generator\n",
+    "\n",
+    "class ReminderTool(Tool):\n",
+    "    inputs = {\n",
+    "        \"reminder_text\": {\n",
+    "            \"type\": \"string\",\n",
+    "            \"description\": \"Reminder content to schedule\"\n",
+    "        }\n",
+    "    }\n",
+    "    output_type = \"string\"\n",
+    "    name = \"ReminderTool\"\n",
+    "    description = \"Tool to create a new reminder by sending it to the reminders API.\"\n",
+    "\n",
+    "    def forward(self, reminder_text: str) -> str:\n",
+    "        print(\"REMINDER TEXT\", reminder_text)\n",
+    "        url = \"https://reminders-api.com/api/applications/1231/reminders/\"\n",
+    "        headers = {\n",
+    "            \"Authorization\": f\"Bearer {REMINDERS_API_KEY}\",\n",
+    "            \"Content-Type\": \"application/json\"\n",
+    "        }\n",
+    "        title = reminder_text.strip().capitalize()\n",
+    "        timezone = \"Europe/Paris\"\n",
+    "        now = datetime.now()\n",
+    "        # extract date\n",
+    "        date_match = re.search(r\"\\b(\\d{4}-\\d{2}-\\d{2})\\b\", reminder_text)\n",
+    "        if date_match:\n",
+    "            date_str = date_match.group(1)\n",
+    "        else:\n",
+    "            date_str = (now + timedelta(days=1)).strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "        # extract time\n",
+    "        time_match = re.search(r\"\\b(\\d{2}:\\d{2})\\b\", reminder_text)\n",
+    "        if time_match:\n",
+    "            time_str = time_match.group(1)\n",
+    "        else:\n",
+    "            time_str = \"09:00\"\n",
+    "        \n",
+    "        notify_match = re.search(r\"\\b(in|before)\\s+(\\d+\\s+(minutes?|hours?|days?|weeks?))\", reminder_text, re.IGNORECASE)\n",
+    "        notify_in_advance = notify_match.group(2) if notify_match else \"10 minutes\"\n",
+    "        payload = {\n",
+    "            \"title\": title,\n",
+    "            \"timezone\": timezone,\n",
+    "            \"date_tz\": date_str,\n",
+    "            \"time_tz\": time_str,\n",
+    "            \"notify_in_advance\": notify_in_advance,\n",
+    "            \"snoozed\": 0\n",
+    "        }\n",
+    "        print(\"payload: \", payload)\n",
+    "        try:\n",
+    "            response = requests.post(url, headers=headers, json=payload)\n",
+    "            response.raise_for_status()\n",
+    "            return f\"Reminder created for {date_str} at {time_str}: {title}\"\n",
+    "        except Exception as e:\n",
+    "            return f\"Failed to create reminder: {e}\"\n",
+    "\n",
+    "\n",
     "model = LiteLLMModel(model_id=\"ollama/qwen2.5-coder:3b\")\n",
     "\n",
     "def generate_prompt(name, purpose, capabilities, returns, final_only=True):\n",
@@ -344,13 +466,39 @@
     "    \"\"\"\n",
     ")\n",
     "\n",
+    "prompt_reminder = {\n",
+    "    \"\"\"\n",
+    "IMPORTANT: This is a reminder-related query. You must create and schedule a reminder using the provided content. Extract and structure the information accurately.\n",
+    "\n",
+    "You must determine and prepare the following fields:\n",
+    "- Title: A clear, concise description of what the reminder is for.\n",
+    "- Date (date_tz): The local date when the reminder should trigger. Use YYYY-MM-DD format. If not specified, default to tomorrow.\n",
+    "- Time (time_tz): The local time when the reminder should trigger. Use HH:MM format. If not specified, default to 09:00.\n",
+    "- Timezone: Use \"Europe/Helsinki\" unless another timezone is clearly specified.\n",
+    "- Notify in Advance (notify_in_advance): How much earlier the user should be notified. Accept formats like \"10 minutes\", \"1 hour\", or \"2 days\". If unspecified, default to \"10 minutes\".\n",
+    "- Optional Recurrence (rrule): Include only if user mentions repeating, recurring, or scheduling something regularly.\n",
+    "- Optional Snoozed (snoozed): Set to 1 if user explicitly says to pause, snooze, or delay the reminder.\n",
+    "\n",
+    "Use this information to call the ReminderTool with the correct structure.\n",
+    "\n",
+    "Only return the final confirmation message:\n",
+    "- Confirm the reminder was scheduled\n",
+    "- Mention the title, date, time, and advance notification\n",
+    "\n",
+    "Do not show code or tool calls. Do not explain your process. If unable to create the reminder, return \"NO_RESPONSE\".\n",
+    "\n",
+    "\"\"\"\n",
+    "}\n",
+    "\n",
     "\n",
     "# Initialize agents\n",
     "agent_wellbeing = CodeAgent(model=model, tools=[], max_steps=2, verbosity_level=-1)\n",
     "agent_fitness = CodeAgent(model=model, tools=[get_weather], max_steps=2, verbosity_level=-1)\n",
     "agent_search = CodeAgent(model=model, tools=[DuckDuckGoSearchTool()], max_steps=2, verbosity_level=-1)\n",
     "agent_nutrition = CodeAgent(model=model, tools=[SpoonacularTool(), DuckDuckGoSearchTool()], max_steps=2, verbosity_level=-1)\n",
+    "agent_reminder = CodeAgent(model=model, tools=[ReminderTool()], max_steps=2, verbosity_level=-1)\n",
     "# agent_nutrition.prompt_templates['system_prompt'] = prompt_nutrition\n",
+    "\n",
     "\n",
     "agent_router = CodeAgent(model=model, tools=[], max_steps=3, verbosity_level=-1)\n",
     "\n",
@@ -360,6 +508,7 @@
     "agent_prompt[\"Fitness\"] = [agent_fitness, prompt_fitness]\n",
     "agent_prompt[\"Search\"] = [agent_search, prompt_search]\n",
     "agent_prompt[\"Nutrition\"] = [agent_nutrition, prompt_nutrition]\n",
+    "agent_prompt[\"Reminder\"] = [agent_reminder, prompt_reminder]\n",
     "\n",
     "\n",
     "def router_helper(raw_outputs):\n",
@@ -443,6 +592,10 @@
     "                print(f\"\\n[Invoking Nutrition Agent]\")\n",
     "                response = agent_nutrition.run(v)\n",
     "                print(f\"\\n[Nutrition Agent Response]\", response)\n",
+    "            elif k == \"Reminder\":\n",
+    "                print(f\"\\n[Invoking Reminder Agent]\")\n",
+    "                response = agent_reminder.run(v)\n",
+    "                print(f\"\\n[Reminder Agent Response]\", response)\n",
     "            else: # Default to search\n",
     "                response = agent_invoker(v, weather_text, prompt_search, \"Search\", agent_search)\n",
     "            \n",
@@ -453,8 +606,8 @@
     "if __name__ == '__main__':\n",
     "    test_input = \"I am feeling energetic today, I want to do a good workout that includes going\" \\\n",
     "    \" to the swimming pool due to it being very hot today,\" \\\n",
-    "    \" I want to know what does the word key mean in German, also add to my training biking and\" \\\n",
-    "    \" tell me a good place to do it. I need to eat to boost my protein intake\"\n",
+    "    \" also add to my training biking and\" \\\n",
+    "    \" tell me a good place to do it. I need to eat to boost my protein intake and remind me to drink water in 1 hour\"\n",
     "    location = {'lat': 48.8566, 'lon': 2.3522}  # Paris\n",
     "    output = router(test_input, location)\n",
     "    # print(output)"
@@ -463,15 +616,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4e025ee",
+   "id": "2f3cdfb9",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
